fixing layout problems, added real data to project

--- a/src/compontents/contact/contact.css
+++ b/src/compontents/contact/contact.css
@@ -1,7 +1,7 @@
 .container.container__contact {
-  width: 60%;
+  width: 70%;
   display: grid;
-  grid-template-columns: 30% 65%;
+  grid-template-columns: 35% 65%;
 
   gap: 2rem;
 }
@@ -34,6 +34,7 @@
 }
 
 .contact-option__email {
+  font-size: 0.8rem;
   margin-bottom: 0.8rem;
 }
 
